feat: add file-backed event store and manual runner

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lab001-cqrs-es-node",
+  "name": "cqrs-ordering-service",
   "version": "0.1.0",
   "private": true,
-  "description": "Lab 001 — CQRS + ES (Node/NestJS) bootstrap with /healthz and /metrics",
+  "description": "Order Service implementing CQRS + Event Sourcing with SQLite projections",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc -p tsconfig.build.json",
@@ -19,6 +19,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^22.5.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
