--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,5 @@ OUTBOX_DISPATCHER_MAX_BACKOFF_MS=30000
 # Projector polling interval
 PROJECTOR_POLL_INTERVAL_MS=500
 
-OUTBOX_DISPATCHER_FAIL_ONCE=true
+# Only true to try outbox error handler
+OUTBOX_DISPATCHER_FAIL_ONCE=false
